feat(views): progress